<resources>
    <string name="app_name">EduGuide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mehar</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_edit">Edit Profile</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_doc">My Documents</string>
    <string name="menu_pass">Change Password</string>
    <string name="menu_log">Log Out</string>

    <string name="home_second">Home Second</string>
</resources>
