<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_edit" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_doc"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_doc" />
        <item
            android:id="@+id/nav_pass"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:title="@string/menu_pass" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/menu_log" />

    </group>
</menu>
