<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eduguide.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.eduguide.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_editprofile"
        android:name="com.example.eduguide.ui.editprofile.EditProfileFragment"
        android:label="@string/menu_edit"
        tools:layout="@layout/fragment_editprofile" />
    <fragment
        android:id="@+id/nav_upload"
        android:name="com.example.eduguide.ui.upload.UploadFragment"
        android:label="@string/menu_upload"
        tools:layout="@layout/fragment_upload" />
    <fragment
        android:id="@+id/nav_doc"
        android:name="com.example.eduguide.ui.documents.DocumentFragment"
        android:label="@string/menu_doc"
        tools:layout="@layout/fragment_document" />
    <fragment
        android:id="@+id/nav_pass"
        android:name="com.example.eduguide.ui.changepassword.ChangePasswordFragment"
        android:label="@string/menu_pass"
        tools:layout="@layout/fragment_changepassword" />

</navigation>